Made more options for posting and editing projects, fixed button alignment in user_projects, got rid of signup page

--- a/public/css/user_projects.css
+++ b/public/css/user_projects.css
@@ -61,3 +61,7 @@ a.morelink {
 .page-header {
     text-align: center;
 }
+
+#details-edit-block {
+    text-align: center;
+}
